<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".centre.AddCentruSanitar"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:fontFamily="cursive"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/popescu_georgiana_txtadd_titlu"
        android:text="@string/completeaz_toate_c_mpurile"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_btn_Save"
        android:text="@string/save"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/popescu_georgiana_edittxt_oraDeschidere"
    android:hint="@string/ora_deschidere"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textStyle="italic"
    android:textSize="20sp"
    android:fontFamily="cursive"
    app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_tyl_judet"
    android:inputType="number"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_edittxt_oraInchidere"
        android:hint="@string/ora_inchidere"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="italic"
        android:textSize="20sp"
        android:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_edittxt_oraDeschidere"
        android:inputType="number"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_txtadd_titlu"
        android:background="@color/white"
        android:id="@+id/popescu_georgiana_tyl_unitate">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:fontFamily="cursive"
            android:id="@+id/popescu_georgiana_tye_unitate"
            android:hint="@string/unitate" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_tyl_unitate"
        android:id="@+id/popescu_georgiana_tyl_judet">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:fontFamily="cursive"
            android:id="@+id/popescu_georgiana_tye_judet"
            android:hint="@string/judet" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>