<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".teste.ListTeste"
    android:background="@color/purple_200">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/list_rezultate_teste"
        android:id="@+id/popescu_georgiana_txttest_titlu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_txttest_titlu"
        android:id="@+id/popescu_georgiana_lv_teste"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_btn_preluareHttp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_btn_back_test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/popescu_georgiana_btn_preluareHttp"
        android:background="@drawable/btnrotund"
        android:layout_marginBottom="16dp"
        android:text="@string/preia_din_http_testele"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_btn_preluareHttp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/popescu_georgiana_btn_back_test"
        android:text="@string/napoi2"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btnrotund"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_btn_back_test"
        android:id="@+id/popescu_georgiana_btn_test_grafic"
        android:text="@string/grafic"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_lv_teste"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btnrotund"
        />
</androidx.constraintlayout.widget.ConstraintLayout>