<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/hp"
    >


    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_txtmain_titlu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:text="@string/informa_ii_cu_privire_la_rezultatele_testelor_covid_i_centrele_disponibile_de_testare"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_teste"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/btnlistateste"
        android:id="@+id/popescu_georgiana_btn_ListaTesteCovid"
         app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_btn_ListaCentre"
        app:layout_constraintBottom_toBottomOf="parent"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lista_centre"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/btnlistacentre"
        android:id="@+id/popescu_georgiana_btn_ListaCentre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_btn_ListaTesteCovid"
       app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>