<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popescu_georgiana_imgView_home"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_house_24"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_imgView_open"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_txtView_oraInchidere"
        android:id="@+id/popescu_georgiana_imgView_close"
        android:src="@drawable/ic_baseline_lock_24"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_imgView_home"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_txtView_oraDeschidere"
        android:id="@+id/popescu_georgiana_imgView_open"
        android:src="@drawable/ic_baseline_lock_open_24"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_imgView_home"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_txtView_unitate"
        android:id="@+id/popescu_georgiana_lv_txtView_judet"
        android:text="@string/judet2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_lv_txtView_judet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/popescu_georgiana_lv_txtView_unitate"
        android:text="@string/unitate2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_imgView_open"
      app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_imgView_home"
      app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/popescu_georgiana_lv_txtView_oraDeschidere"
        android:text="@string/deschidere"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_imgView_close"
      app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_imgView_open"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/popescu_georgiana_lv_txtView_oraInchidere"
        android:text="@string/inchidere"/>


</androidx.constraintlayout.widget.ConstraintLayout>