<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".centre.ListCentre"
    android:background="@drawable/images">
<TextView
    android:layout_width="wrap_content"
    android:layout_marginTop="16dp"
    android:textSize="22sp"
    android:fontFamily="casual"
    android:textStyle="bold"
    android:textAlignment="center"
    android:layout_height="wrap_content"
    android:text="@string/list_centre_sanitare_disponibile"
    android:id="@+id/popescu_georgiana_txtcentru_titlu"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_txtcentru_titlu"
        android:id="@+id/popescu_georgiana_lv_centre"
        app:layout_constraintBottom_toTopOf="@id/popescu_georgiana_btn_AdaugaCentru"
         />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_btn_back_centru"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btnrotund"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/popescu_georgiana_btn_AdaugaCentru"
        android:text="@string/adauga_centru_sanitar"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/btnrotund"
        android:layout_marginBottom="16dp"
       app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_btn_AdaugaCentru"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/popescu_georgiana_btn_back_centru"
        android:text="@string/napoi" />
</androidx.constraintlayout.widget.ConstraintLayout>