<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_lv_teste_imgView_cod"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_teste_txtView_tip"
        android:id="@+id/popescu_georgiana_lv_teste_imgView_tipTest"
        android:src="@drawable/ic_baseline_back_hand_24"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_teste_txtView_cod"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/popescu_georgiana_lv_teste_imgView_cod"
        android:src="@drawable/ic_baseline_mood_24"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_lv_teste_txtView_tip"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_teste_txtView_rezultat"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_lv_teste_imgView_cod"
        android:id="@+id/popescu_georgiana_lv_teste_imgView_rezultat"
        android:src="@drawable/ic_baseline_sick_24"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cod_test"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_lv_teste_imgView_cod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/popescu_georgiana_lv_teste_txtView_cod"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_test"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_lv_teste_imgView_tipTest"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_lv_teste_imgView_cod"
        app:layout_constraintEnd_toStartOf="@id/popescu_georgiana_lv_teste_imgView_rezultat"
        android:id="@+id/popescu_georgiana_lv_teste_txtView_tip"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rezultat_test"
        app:layout_constraintStart_toEndOf="@id/popescu_georgiana_lv_teste_imgView_rezultat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popescu_georgiana_lv_teste_imgView_cod"
        android:id="@+id/popescu_georgiana_lv_teste_txtView_rezultat"/>
</androidx.constraintlayout.widget.ConstraintLayout>